Deport space x api in class

--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -3,6 +3,6 @@
 {% block bodyclass %}test-twig{% endblock bodyclass %}
 
 {% block content %}
-    <h1>{{ name }}</h1>
+    <h1>{{ name }} coucou</h1>
 {% endblock content %}
 
